--- a/src/spx2xlsx.vbproj
+++ b/src/spx2xlsx.vbproj
@@ -117,4 +117,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"C:\Program Files (x86)\Microsoft\ILMerge\ILMerge.exe" /wildcards /out:$(TargetName)_merge.exe $(TargetFileName) *.dll  /targetplatform:v4,"C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0\Profile\Client"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
